--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   },
   "author": {
     "name": "ifdo",
-    "email": "",
+    "email": "nibblesky@gmail.com",
     "url": "https://ifdo.co.kr/"
   },
   "license": "MIT",
